[JS] 1. 이메일로 가입할 수 있도록 코드 추가, 2. 기존 유저들이 로그인할 때 고유 ID 등록되도록 코드 추가, 3. 게시글 검색 기능 추가, 4. 게시글 삭제 기능 추가, 5. 수정 페이지에서 제목을 입력하지 않은 경우, 수정하지 못하도록 코드 추가, 6. 보기 페이지에서 작성자만이 삭제 또는 수정 기능을 사용할 수 있도록 코드 수정, 7. 글쓰기 페이지에서 제목을 입력하지 않은 경우, 글쓰지 못하도록 코드 추가, 8. 악보 게시판에서 썸네일이 등장하도록 코드 추가, 9. 홈 페이지를 위한 jssor 추가, 10. 연주 게시판에서 인기 게시물이 없을 경우, 그래도 출력되도록 한 점 수정 [HTML] 1. 홈, 소개 페이지의 너비 조정, 2. 홈 페이지 jssor 수정, 3. 각 게시판에 검색 기능 추가, 4. 설정 페이지에서 로그인 정보가 잘 나타나도록 수정, 5. 설정 페이지에서 다른 항목도 볼 수 있도록 코드 수정, 6. 하단 스크립트 통합 [CSS] 1. 전체 페이지의 상단 패딩 수정, 2. jssor 추가로 인한 홈 페이지 스타일 수정, 3. 검색 기능 추가로 인한 검색 스타일 수정, 4. 연주 게시판의 글들이 불규칙적으로 나타난 점 수정

--- a/public_html/public/css/custom.css
+++ b/public_html/public/css/custom.css
@@ -1,8 +1,7 @@
 /**
 Music Community for Web Programming
 
-Written. 2017-04-14
-Last Updated. 2017-04-14
+First Written. 2017-04-14
 **/
 
 /*****************************************************
@@ -11,7 +10,7 @@ Last Updated. 2017-04-14
  *
 ******************************************************/
 body {
-     padding-top: 70px;
+     padding-top: 50px;
      overflow-x: hidden;
 }
 
@@ -43,20 +42,20 @@ table > thead > tr > th {
 ****************************************/
 @media screen and (max-width: 1199px) {
      body {
-          padding-top: 70px;
+          padding-top: 50px;
      }
 }
 
 @media screen and (max-width: 991px) {
      body {
-          padding-top: 118px;
+          padding-top: 100px;
      }
 }
 
 /** For Smartphone **/
 @media screen and (max-width: 767px) {
      body {
-          padding-top: 70px;
+          padding-top: 50px;
      }
 
      /********************************************
@@ -101,11 +100,40 @@ table > thead > tr > th {
 
 /*****************************************************
  *
+ * [Index]
+ *
+******************************************************/
+.slide-nav {
+     position: absolute;
+}
+.slide-nav div, .slide-nav div:hover, .slide-nav .av {
+     position: absolute;
+     /* size of bullet element */
+     width: 16px;
+     height: 16px;
+     background: url('../img/b05.png') no-repeat;
+     overflow: hidden;
+     cursor: pointer;
+}
+.slide-nav div { background-position: -7px -7px; }
+.slide-nav div:hover, .slide-nav .av:hover { background-position: -37px -7px; }
+.slide-nav .av { background-position: -67px -7px; }
+.slide-nav .dn, .slide-nav .dn:hover { background-position: -97px -7px; }
+
+.slide-arrow {display:block;position:absolute;cursor:pointer;}
+.slide-arrow .a {fill:#fff;}
+.slide-arrow:hover {opacity:.8;}
+.slide-arrow.jssora031dn {opacity:.5;}
+.slide-arrow.jssora031ds { opacity: .3; pointer-events: none; }
+
+/*****************************************************
+ *
  * [Mentor Board]
  *
 ******************************************************/
 .mentor-bottom {
      position: relative;
+     margin-bottom: 20px;
 }
 .mentor-bottom .mentor-bottom-right {
      position: absolute;
@@ -131,7 +159,7 @@ table > thead > tr > th {
 .play-article {
      position: relative;
      padding: 20px;
-     min-height: 320px;
+     height: 320px;
      margin-bottom: 10px;
      border: 5px solid #fff;
      background-color: #eee;
@@ -149,6 +177,7 @@ table > thead > tr > th {
 
 .play-bottom {
      position: relative;
+     margin-bottom: 20px;
 }
 .play-bottom .play-bottom-right {
      position: absolute;
@@ -208,14 +237,17 @@ table > thead > tr > th {
 
 .sheet-bottom {
      position: relative;
+     margin-bottom: 20px;
 }
 .sheet-bottom .sheet-bottom-right {
      position: absolute;
      top: 0px;
      right: 0px;
 }
-
-.sheet-pagination {
+.sheet-bottom .sheet-search {
+     text-align: center;
+}
+.sheet-bottom .sheet-pagination {
      text-align: center;
 }
 
@@ -233,9 +265,49 @@ table > thead > tr > th {
 }
 .view-bottom {
      position: relative;
+     margin-bottom: 20px;
 }
 .view-bottom .view-bottom-right {
      position: absolute;
      top: 0px;
      right: 0px;
+}
+
+/*****************************************************
+ *
+ * [BOARD - write]
+ *
+******************************************************/
+.write-form {
+     margin-top: 20px;
+}
+
+/*****************************************************
+ *
+ * [BOARD - modify]
+ *
+******************************************************/
+.modify-form {
+     margin-top: 20px;
+}
+
+/*****************************************************
+ *
+ * [BOARD - delete]
+ *
+******************************************************/
+.delete-form {
+     margin-top: 20px;
+}
+
+/*****************************************************
+ *
+ * [Mypage]
+ *
+******************************************************/
+.mypage-box {
+     margin-top: 20px;
+}
+.mypage-form {
+     margin-top: 20px;
 }
