--- a/public_html/views/_write.ejs
+++ b/public_html/views/_write.ejs
@@ -71,7 +71,7 @@
 
           <div class="container">
                <div class="row">
-                    <form class="form-horizontal" action="/board/<%= bid %>/writeok" method="post">
+                    <form class="form-horizontal write-form" action="/board/<%= bid %>/writeok" method="post">
 <% if (bid == "sheet" || bid == "play") { %>
                          <div class="form-group">
                               <label for="writeInpCate" class="col-sm-2 control-label">카테고리</label>
@@ -105,6 +105,9 @@
                          <div class="form-group">
                               <div class="col-sm-offset-2 col-sm-10">
                                    <input type="hidden" id="writeInpBid" name="writeInpBid" value="<%= bid %>" />
+<% if (bid == "sheet") { %>
+                                   <input type="hidden" id="writeInpImg" name="writeInpImg" value="" />
+<% } %>
                                    <input type="button" class="btn btn-default" onclick="submitContents(this);" value="작성" />
                               </div>
                          </div>
@@ -112,6 +115,7 @@
                </div>
           </div>
 
+<% include _foot %>
           <!-- ckeditor -->
           <script type="text/javascript">
                CKEDITOR.replace("writeInpContent", {
@@ -122,9 +126,20 @@
                function submitContents(elClickedObj) {
                     var editor = CKEDITOR.instances.writeInpContent
                       , editor_Data = editor.getData();
+
+                    if (($("#writeInpTitle").text()).length < 1) {
+                         alert("제목을 입력해주세요!");
+                         return;
+                    }
+
                     if (editor_Data.length < 1) {
                          alert("내용을 입력해주세요!");
                          return;
+                    }
+
+                    var getImg = $(editor_Data).find("img")[0];
+                    if ((getImg != undefined) && ($("#writeInpImg").length > 0)) {
+                         $("#writeInpImg").val(getImg.getAttribute("src"));
                     }
 
                     try {
@@ -132,12 +147,5 @@
                     } catch (e) {}
                }
           </script>
-          <!-- jQuery -->
-          <script src="//code.jquery.com/jquery.js"></script>
-          <!-- Bootstrap JavaScript -->
-          <!--script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script-->
-          <script src="../../js/bootstrap.min.js"></script>
-          <!-- Tether -->
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
      </body>
 </html>
